# Rust-Software-Rasterizer

./: Cargo.toml  README.md
src/: camera.rs  framebuffer.rs  geometry.rs  main.rs  texture.rs  transform.rs  utilities.rs  window.rs
