[package]
name = "rust-software-rasterizer"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
glam = "0.31.0"
stb_image = "0.3.0"
gltf = "1.4.1"
bevy = "0.18.0"
bevy_ecs_tiled = "0.11.2"
bevy_ecs_tilemap = "0.18.1"
bevy_egui = "0.39.0"
rand = "0.9.2"
rayon = "1.10"